src/css/main.scss
$primary-text: #212121;
$secondary-text: #727272;
$purple: #913abd;
$bg-color: #e9eaea;
$section-padding-small: 28px;
$section-padding-md: 46px 28px;

html,
body {
    margin: 0;
    padding: 0;
    background-color: $bg-color;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: $secondary-text;
    h2 {
        margin: 0;
    }
    .section-container {
        margin: 0 auto;
        padding: $section-padding-small;
        max-width: 1170px;
    }
    .grid-container {
        display: flex;
        flex-wrap: wrap;
    }
}

.intro {
    background-color: $purple;
    padding: $section-padding-small;
    .intro-name {
        margin: 0;
        font-weight: 200;
        font-size: 36px;
        color: #eee;
    }
}

.hero-section {
    background-color: #fefefe;
    .hero-title {
        margin: 0;
    }
    .hero-img {
        margin: 16px 0;
        width: 100%;
    }
    .hero-description .hero-description-line {
        font-size: 16px;
        margin: 12px 0;
    }
}

.projects-section {
    .projects-title {
        margin-bottom: 22px;
        font-size: 32px;
        font-weight: 200;
        color: $purple;
    }
    .project {
        width: 100%;
        margin: 9px 0;
        background-color: #fff;
        text-decoration: none;
        color: $secondary-text;
        &:hover {
            box-shadow: 0 4px 18px #888888;
        }
        .project-img {
            width: 100%;
        }
        .project-title,
        .project-description {
            margin: 16px 12px;
        }
    }
}

.skills-section {
    background-color: #fff;
    .skills-title {
        color: $purple;
        font-size: 32px;
        font-weight: 200;
    }
    .skillset-title {
        letter-spacing: 1.5px;
        font-weight: 400px;
        font-size: 22px;
        margin-bottom: 12px;
    }
    .skill-title {
        font-weight: 200;
    }
}

.education-section {
    .education-title {
        font-size: 32px;
        font-weight: 200;
        color: $purple;
    }
    .school-title {
    }
}

.contact-section {
    .contact-title {
        font-size: 32px;
        font-weight: 200;
        color: $purple;
    }
    .contact {
    }
}

/* Small Screens and up */
@media (min-width: 525px) {
    body {
        .section-container {
            padding: $section-padding-md;
        }
    }
    .intro {
        padding: 60px 36px;
        .intro-name {
            font-size: 56px;
        }
    }
    .hero-section {
        background-color: #fefefe;
        .hero-title {
            font-size: 22px;
            margin: 0;
        }
        .hero-img {
            margin: 16px 0;
            width: 100%;
        }
        .hero-description {
            margin: 36px 0;
            .hero-description-line {
                font-size: 22px;
                margin: 12px 0;
            }
        }
    }
}

/* Medium Screens and up */
@media (min-width: 768px) {
    .grid-container {
        .md-col-4 {
            width: 32%;
            margin-right: 2%;
        }
        .md-col-4:nth-child(3n) {
            margin-right: 0;
        }
    }
    .hero-section {
        .hero-title {
            margin-top: 46px;
        }
        .hero-description {
            margin-bottom: 56px;
        }
    }
}

/* Just Small Screens */
@media (min-width: 525px) and (max-width: 767px) {
    .grid-container {
        justify-content: space-between;
        .sm-col-6 {
            width: 48%;
        }
    }
}

